[package]
name = "wkhtmltopdf"
version = "0.3.0"
license = "MIT"
authors = ["Anthony Nowell <anowell@gmail.com>"]
edition = "2018"
description = "High-level bindings to wkhtmltopdf"
documentation = "https://anowell.github.io/wkhtmltopdf-rs/wkhtmltopdf/"
repository = "https://github.com/anowell/wkhtmltopdf-rs"
readme = "README.md"
keywords = ["wkhtmltox", "wkhtmltopdf", "wkhtmltoimage", "pdf", "html"]

[dependencies]
wkhtmltox-sys = "0.1.0"
url = "2.1"
lazy_static = "1.4"
log = "0.4"
quick-error = "1.1.0"
thread-id = "3.3"

[dev-dependencies]
env_logger = "0.7"
